made the file easier to see

--- a/changeType.ipynb
+++ b/changeType.ipynb
@@ -22,186 +22,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>EBITDA (millions)</th>\n",
-       "      <th>Revenue (millions)</th>\n",
-       "      <th>Gross Profit (millions)</th>\n",
-       "      <th>Op Income (millions)</th>\n",
-       "      <th>Net Income (millions)</th>\n",
-       "      <th>EPS</th>\n",
-       "      <th>Shares Outstanding</th>\n",
-       "      <th>Year Close Price</th>\n",
-       "      <th>Total Assets (millions)</th>\n",
-       "      <th>Cash on Hand (millions)</th>\n",
-       "      <th>Long Term Debt (millions)</th>\n",
-       "      <th>Total Liabilities (millions)</th>\n",
-       "      <th>Gross Margin</th>\n",
-       "      <th>PE ratio</th>\n",
-       "      <th>Employees</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>$134,661</td>\n",
-       "      <td>$391,035</td>\n",
-       "      <td>$180,683</td>\n",
-       "      <td>$123,216</td>\n",
-       "      <td>$93,736</td>\n",
-       "      <td>$6.08</td>\n",
-       "      <td>15,408</td>\n",
-       "      <td>243.0400</td>\n",
-       "      <td>$364,980</td>\n",
-       "      <td>$65,171</td>\n",
-       "      <td>$85,750</td>\n",
-       "      <td>$308,030</td>\n",
-       "      <td>46.21%</td>\n",
-       "      <td>39.97</td>\n",
-       "      <td>164,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>$125,820</td>\n",
-       "      <td>$383,285</td>\n",
-       "      <td>$169,148</td>\n",
-       "      <td>$114,301</td>\n",
-       "      <td>$96,995</td>\n",
-       "      <td>$6.13</td>\n",
-       "      <td>15,813</td>\n",
-       "      <td>191.5919</td>\n",
-       "      <td>$352,583</td>\n",
-       "      <td>$61,555</td>\n",
-       "      <td>$95,281</td>\n",
-       "      <td>$290,437</td>\n",
-       "      <td>45.03%</td>\n",
-       "      <td>29.84</td>\n",
-       "      <td>161,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>$130,541</td>\n",
-       "      <td>$394,328</td>\n",
-       "      <td>$170,782</td>\n",
-       "      <td>$119,437</td>\n",
-       "      <td>$99,803</td>\n",
-       "      <td>$6.11</td>\n",
-       "      <td>16,326</td>\n",
-       "      <td>128.5816</td>\n",
-       "      <td>$352,755</td>\n",
-       "      <td>$48,304</td>\n",
-       "      <td>$98,959</td>\n",
-       "      <td>$302,083</td>\n",
-       "      <td>43.06%</td>\n",
-       "      <td>21.83</td>\n",
-       "      <td>164,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>$120,233</td>\n",
-       "      <td>$365,817</td>\n",
-       "      <td>$152,836</td>\n",
-       "      <td>$108,949</td>\n",
-       "      <td>$94,680</td>\n",
-       "      <td>$5.61</td>\n",
-       "      <td>16,865</td>\n",
-       "      <td>174.7132</td>\n",
-       "      <td>$351,002</td>\n",
-       "      <td>$62,639</td>\n",
-       "      <td>$109,106</td>\n",
-       "      <td>$287,912</td>\n",
-       "      <td>43.02%</td>\n",
-       "      <td>28.93</td>\n",
-       "      <td>154,000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>$77,344</td>\n",
-       "      <td>$274,515</td>\n",
-       "      <td>$104,956</td>\n",
-       "      <td>$66,288</td>\n",
-       "      <td>$57,411</td>\n",
-       "      <td>$3.28</td>\n",
-       "      <td>17,528</td>\n",
-       "      <td>129.7556</td>\n",
-       "      <td>$323,888</td>\n",
-       "      <td>$90,943</td>\n",
-       "      <td>$98,667</td>\n",
-       "      <td>$258,549</td>\n",
-       "      <td>38.78%</td>\n",
-       "      <td>35.14</td>\n",
-       "      <td>147,000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   year EBITDA (millions) Revenue (millions) Gross Profit (millions)  \\\n",
-       "0  2024          $134,661           $391,035                $180,683   \n",
-       "1  2023          $125,820           $383,285                $169,148   \n",
-       "2  2022          $130,541           $394,328                $170,782   \n",
-       "3  2021          $120,233           $365,817                $152,836   \n",
-       "4  2020           $77,344           $274,515                $104,956   \n",
+       "<bound method NDFrame.head of     year EBITDA (millions) Revenue (millions) Gross Profit (millions)  \\\n",
+       "0   2024          $134,661           $391,035                $180,683   \n",
+       "1   2023          $125,820           $383,285                $169,148   \n",
+       "2   2022          $130,541           $394,328                $170,782   \n",
+       "3   2021          $120,233           $365,817                $152,836   \n",
+       "4   2020           $77,344           $274,515                $104,956   \n",
+       "5   2019           $76,477           $260,174                 $98,392   \n",
+       "6   2018           $81,801           $265,595                $101,839   \n",
+       "7   2017           $71,501           $229,234                 $88,186   \n",
+       "8   2016           $70,529           $215,639                 $84,263   \n",
+       "9   2015           $82,487           $233,715                 $93,626   \n",
+       "10  2014           $60,449           $182,795                 $70,537   \n",
+       "11  2013           $55,756           $170,910                 $64,304   \n",
+       "12  2012           $58,518           $156,508                 $68,662   \n",
+       "13  2011           $35,604           $108,249                 $43,818   \n",
+       "14  2010           $19,412            $65,225                 $25,684   \n",
+       "15  2009           $12,474            $42,905                 $17,222   \n",
        "\n",
-       "  Op Income (millions) Net Income (millions)    EPS Shares Outstanding  \\\n",
-       "0             $123,216               $93,736  $6.08             15,408   \n",
-       "1             $114,301               $96,995  $6.13             15,813   \n",
-       "2             $119,437               $99,803  $6.11             16,326   \n",
-       "3             $108,949               $94,680  $5.61             16,865   \n",
-       "4              $66,288               $57,411  $3.28             17,528   \n",
+       "   Op Income (millions) Net Income (millions)    EPS Shares Outstanding  \\\n",
+       "0              $123,216               $93,736  $6.08             15,408   \n",
+       "1              $114,301               $96,995  $6.13             15,813   \n",
+       "2              $119,437               $99,803  $6.11             16,326   \n",
+       "3              $108,949               $94,680  $5.61             16,865   \n",
+       "4               $66,288               $57,411  $3.28             17,528   \n",
+       "5               $63,930               $55,256  $2.97             18,596   \n",
+       "6               $70,898               $59,531  $2.98             20,000   \n",
+       "7               $61,344               $48,351  $2.30             21,007   \n",
+       "8               $60,024               $45,687  $2.08             22,001   \n",
+       "9               $71,230               $53,394  $2.31             23,172   \n",
+       "10              $52,503               $39,510  $1.61             24,491   \n",
+       "11              $48,999               $37,037  $1.42             26,087   \n",
+       "12              $55,241               $41,733  $1.58             26,470   \n",
+       "13              $33,790               $25,922  $0.99             26,226   \n",
+       "14              $18,385               $14,013  $0.54             25,892   \n",
+       "15              $11,740                $8,235  $0.32             25,396   \n",
        "\n",
-       "   Year Close Price Total Assets (millions) Cash on Hand (millions)  \\\n",
-       "0          243.0400                $364,980                 $65,171   \n",
-       "1          191.5919                $352,583                 $61,555   \n",
-       "2          128.5816                $352,755                 $48,304   \n",
-       "3          174.7132                $351,002                 $62,639   \n",
-       "4          129.7556                $323,888                 $90,943   \n",
+       "    Year Close Price Total Assets (millions) Cash on Hand (millions)  \\\n",
+       "0           243.0400                $364,980                 $65,171   \n",
+       "1           191.5919                $352,583                 $61,555   \n",
+       "2           128.5816                $352,755                 $48,304   \n",
+       "3           174.7132                $351,002                 $62,639   \n",
+       "4           129.7556                $323,888                 $90,943   \n",
+       "5            71.1734                $338,516                $100,557   \n",
+       "6            37.6645                $365,725                 $66,301   \n",
+       "7            39.8109                $375,319                 $74,181   \n",
+       "8            26.8131                $321,686                 $67,155   \n",
+       "9            23.8379                $290,345                 $41,601   \n",
+       "10           24.5797                $231,839                 $25,077   \n",
+       "11           17.4799                $207,000                 $40,546   \n",
+       "12           16.1760                $176,064                 $29,129   \n",
+       "13           12.2002                $116,371                 $25,952   \n",
+       "14            9.7168                 $75,183                 $25,620   \n",
+       "15            6.3481                 $47,501                 $23,464   \n",
        "\n",
-       "  Long Term Debt (millions) Total Liabilities (millions) Gross Margin  \\\n",
-       "0                   $85,750                     $308,030       46.21%   \n",
-       "1                   $95,281                     $290,437       45.03%   \n",
-       "2                   $98,959                     $302,083       43.06%   \n",
-       "3                  $109,106                     $287,912       43.02%   \n",
-       "4                   $98,667                     $258,549       38.78%   \n",
+       "   Long Term Debt (millions) Total Liabilities (millions) Gross Margin  \\\n",
+       "0                    $85,750                     $308,030       46.21%   \n",
+       "1                    $95,281                     $290,437       45.03%   \n",
+       "2                    $98,959                     $302,083       43.06%   \n",
+       "3                   $109,106                     $287,912       43.02%   \n",
+       "4                    $98,667                     $258,549       38.78%   \n",
+       "5                    $91,807                     $248,028       37.95%   \n",
+       "6                    $93,735                     $258,578       38.21%   \n",
+       "7                    $97,207                     $241,272       38.43%   \n",
+       "8                    $75,427                     $193,437       38.52%   \n",
+       "9                    $53,329                     $170,990       40.13%   \n",
+       "10                   $28,987                     $120,292       39.26%   \n",
+       "11                   $16,960                      $83,451       37.41%   \n",
+       "12                        $0                      $57,854       41.91%   \n",
+       "13                        $0                      $39,756       42.41%   \n",
+       "14                        $0                      $27,392       38.76%   \n",
+       "15                        $0                      $15,861       40.95%   \n",
        "\n",
-       "   PE ratio Employees  \n",
-       "0     39.97   164,000  \n",
-       "1     29.84   161,000  \n",
-       "2     21.83   164,000  \n",
-       "3     28.93   154,000  \n",
-       "4     35.14   147,000  "
+       "    PE ratio Employees  \n",
+       "0      39.97   164,000  \n",
+       "1      29.84   161,000  \n",
+       "2      21.83   164,000  \n",
+       "3      28.93   154,000  \n",
+       "4      35.14   147,000  \n",
+       "5      22.49   137,000  \n",
+       "6      12.39   132,000  \n",
+       "7      16.37   123,000  \n",
+       "8      12.84   116,000  \n",
+       "9      10.12   110,000  \n",
+       "10     13.25    97,000  \n",
+       "11     12.14    84,400  \n",
+       "12     10.27    76,100  \n",
+       "13      9.73    63,300  \n",
+       "14     15.19    49,400  \n",
+       "15     20.52    36,800  >"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
